(REGRESSION: 267587@main) Text indent is incorrect when paragraph is affected by a floating element https://bugs.webkit.org/show_bug.cgi?id=265216 <rdar://problem/118701491>

Reviewed by Antti Koivisto.

Before 267587@main (which merged all the float constraints codepaths), we ignored the text-indent during the _initial_ constraint computation
and adjusted the line rect later.
At 267587@main, we started adding the text-indent value twice to the line rect; first while computing the initial constraint and
the second time when we would normally add it.

* LayoutTests/fast/text/text-indent-with-intrusive-float-expected.html: Added.
* LayoutTests/fast/text/text-indent-with-intrusive-float.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::initialConstraintsForLine const): Let's go back to "before 267587@main" state.
(WebCore::Layout::LineBuilder::floatConstrainedRect const): Add some comment and change variable names to reflect what they mean.

Canonical link: https://commits.webkit.org/271080@main