Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp
@@ -529,9 +529,9 @@ LineContent LineBuilder::placeInlineAndFloatContent(const InlineItemRange& needs
 LineBuilder::UsedConstraints LineBuilder::initialConstraintsForLine(const InlineRect& initialLineLogicalRect, std::optional<bool> previousLineEndsWithLineBreak) const
 {
     auto isIntrinsicWidthMode = isInIntrinsicWidthMode() ? InlineFormattingUtils::IsIntrinsicWidthMode::Yes : InlineFormattingUtils::IsIntrinsicWidthMode::No;
-    auto textIndent = formattingContext().formattingUtils().computedTextIndent(isIntrinsicWidthMode, previousLineEndsWithLineBreak, initialLineLogicalRect.width());
-
-    return floatConstrainedRect(initialLineLogicalRect, textIndent);
+    auto constraints = floatConstrainedRect(initialLineLogicalRect, { });
+    constraints.marginStart = formattingContext().formattingUtils().computedTextIndent(isIntrinsicWidthMode, previousLineEndsWithLineBreak, initialLineLogicalRect.width());
+    return constraints;
 }
 
 InlineLayoutUnit LineBuilder::leadingPunctuationWidthForLineCandiate(size_t firstInlineTextItemIndex, size_t candidateContentStartIndex) const
@@ -756,20 +756,20 @@ LineBuilder::UsedConstraints LineBuilder::floatConstrainedRect(const InlineRect&
             return { logicalRect, marginStart, { } };
 
         auto isConstrainedByFloat = OptionSet<UsedFloat> { };
-        auto adjustedLogicalRect = logicalRect;
-        adjustedLogicalRect.shiftLeftBy(-marginStart);
+        // text-indent acts as (start)margin on the line. When looking for intrusive floats we need to check against the line's _margin_ box.
+        auto marginBoxRect = InlineRect { logicalRect.top(), logicalRect.left() - marginStart, logicalRect.width() + marginStart, logicalRect.height() };
 
-        if (constraints.left && constraints.left->x > adjustedLogicalRect.left()) {
-            adjustedLogicalRect.shiftLeftTo(constraints.left->x);
+        if (constraints.left && constraints.left->x > marginBoxRect.left()) {
+            marginBoxRect.shiftLeftTo(constraints.left->x);
             isConstrainedByFloat.add(UsedFloat::Left);
         }
-        if (constraints.right && constraints.right->x < adjustedLogicalRect.right()) {
-            adjustedLogicalRect.setRight(std::max<InlineLayoutUnit>(adjustedLogicalRect.left(), constraints.right->x));
+        if (constraints.right && constraints.right->x < marginBoxRect.right()) {
+            marginBoxRect.setRight(std::max<InlineLayoutUnit>(marginBoxRect.left(), constraints.right->x));
             isConstrainedByFloat.add(UsedFloat::Right);
         }
 
-        adjustedLogicalRect.shiftLeftBy(marginStart);
-        return { adjustedLogicalRect, marginStart, isConstrainedByFloat };
+        auto lineLogicalRect = InlineRect { marginBoxRect.top(), marginBoxRect.left() + marginStart, marginBoxRect.width() - marginStart, marginBoxRect.height() };
+        return { lineLogicalRect, marginStart, isConstrainedByFloat };
     }();
 
     if (auto adjustedRect = formattingContext().quirks().adjustedRectForLineGridLineAlign(constraints.logicalRect))
